@@ -1186,4 +1186,29 @@ proc layouter_debugDraw_finish {c msg} {
     update idletasks
 }
 
+proc layouter_startgrab {w} {
+    #puts "grabbing $w"
+    global opp help_tips
+
+    # the gabbed widget should be the "Stop" button of the module window
+    set help_tips($w) {Calculating the layout -- click the STOP button to end it and start drawing}
+
+    set opp(oldFocus) [focus]
+    set opp(oldGrab) [grab current $w]
+    grab $w
+    focus $w
+}
+
+proc layouter_releasegrab {w} {
+    #puts "releasing grab on $w"
+    global opp help_tips
+
+    # restore tooltip hijacked in layouter_startgrab
+    set help_tips($w.toolbar.stop) {Stop the simulation (F8)}
+
+    catch {focus $opp(oldFocus)}
+    catch {grab release $w}
+    catch {grab release [grab current]}
+}
+
 
