@@ -1,3 +1,7 @@
+2008-04-19  Andras Varga
+
+	* layouting process can now be stopped if it takes too long
+
 2008-03-29  Andras Varga
 
 	* Implemented context menu for text windows. Includes Word wrap on/off,
